--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.mohamedhedhili.jeuxpendu">
+
     <uses-permission android:name="android.permission.VIBRATE" />
 
     <application
@@ -9,22 +10,18 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".SplaschScreen">
+        <activity
+            android:name=".MainActivity"
+            android:screenOrientation="landscape"></activity>
+        <activity android:name=".Theme" />
+        <activity android:name=".Level" />
+
+        <activity android:name=".FirstActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity"
-            android:screenOrientation="landscape"
-            >
-
-    </activity>
-        <activity android:name=".Theme" />
-        <activity android:name=".Level" />
-        <activity android:name=".Configuration" />
-        <activity android:name=".Menu"></activity>
     </application>
 
 </manifest>
